--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="transition-colors duration-300">
 <head>
   <link rel="manifest" href="manifest.json">
-<link rel="icon" href="icon-512.png">
+<link rel="icon" href="./pngwing.com.png">
 <meta name="theme-color" content="#28a745">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
