--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('service-worker.js').then(() => {
-      console.log('✅ Service Worker Registered');
-    }).catch(err => {
-      console.log('❌ Service Worker failed:', err);
-    });
-  }
+ if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/service-worker.js')
+    .then(reg => console.log('SW registered', reg))
+    .catch(err => console.error('SW registration failed', err));
+}
 </script>
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200 min-h-screen">
 
